--- a/.env
+++ b/.env
@@ -31,3 +31,9 @@ APP_SECRET=ec2d5659d53e024f9ffc7ff206e7deec
 ###> nelmio/cors-bundle ###
 CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
 ###< nelmio/cors-bundle ###
+
+###> lexik/jwt-authentication-bundle ###
+JWT_SECRET_KEY=%kernel.project_dir%/config/jwt/private.pem
+JWT_PUBLIC_KEY=%kernel.project_dir%/config/jwt/public.pem
+JWT_PASSPHRASE=b43cf8e6da9d90df0e8b27890e073dd9
+###< lexik/jwt-authentication-bundle ###
